<resources>
    <string name="app_name">야구반 기록관리</string>
    <string name="batter">타자</string>
    <string name="pitcher">투수</string>
    <string name="match_list">경기 기록</string>
    <string name="manage_player">선수 관리</string>
    <string name="no_player">선수 혹은 경기가 없습니다.\n\n각 탭에서 추가해주세요!</string>
    <string name="no_match">경기가 없습니다.\n\n경기를 추가해주세요!</string>
    <string name="backnumber_range">1 ~ 99</string>

    <!-- Manage List Strings -->
    <string name="name_title">이름</string>
    <string name="backnumber_title">등번호</string>
    <string name="position_title">포지션</string>
    <string name="add_player">선수 추가</string>
    <string name="remove_player">선수 삭제</string>

    <!-- Match Strings -->
    <string name="current_match">현재 경기</string>
    <string name="add_match">경기 추가</string>
    <string name="op_team_name">상대 팀</string>
    <string name="match_date">경기 일시</string>
    <string name="match_locate">경기 장소</string>
    <string name="end_match">경기 종료</string>
    <string name="add_match_complete">경기를 추가합니다!</string>
    <string name="team_name_hint">팀 이름을 입력해주세요</string>
    <string name="match_locate_hint">구장을 입력해주세요</string>
    <string name="match_date_hint">날짜를 선택해주세요</string>
    <string name="kwangwoon">광운대학교</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
    <string name="draw">draw</string>

    <!-- Enter Player Popup Strings -->
    <string name="choose_player">선수 선택</string>
    <string name="choose_position">포지션 선택</string>
    <string name="choose_player_hint">선수를 선택해주세요</string>
    <string name="choose_position_hint">포지션을 선택해주세요</string>
    <string name="add_player_complete">선수를 추가합니다!</string>

    <!-- Set Batter Popup Strings -->
    <string name="batter_title">타자 정보</string>
    <string name="times_at_bat">타수</string>
    <string name="hit1">안타</string>
    <string name="hit2">2루타</string>
    <string name="hit3">3루타</string>
    <string name="homerun">홈런</string>
    <string name="strike_out">삼진</string>
    <string name="ball4">볼넷</string>
    <string name="sacrifice_fly">희생플라이</string>
    <string name="confirm"><u>확인</u></string>
    <string name="cancel">취소</string>

    <!-- Add Player Popup Strings -->
    <string name="player_name_hint">이름을 입력해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>