<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_batter"
        android:enabled="true"
        android:icon="@drawable/batter_icon"
        android:title="@string/batter" />

    <item
        android:id="@+id/bottom_nav_pitcher"
        android:enabled="true"
        android:icon="@drawable/pitcher_icon"
        android:title="@string/pitcher" />

    <item
        android:id="@+id/bottom_nav_match_list"
        android:enabled="true"
        android:icon="@drawable/match_list_icon"
        android:title="@string/match_list"/>

    <item
        android:id="@+id/bottom_nav_manage_player"
        android:enabled="true"
        android:icon="@drawable/add_player_icon"
        android:title="@string/manage_player"/>

</menu>